packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
.rightColumn {
  margin-left: 48px
}

.version-number {
  position: relative;
  top: -16px;
  color: var(--welcome-page-ver);
  font-size: 19px;
  line-height: 26px;
  margin-bottom: 32px;
  padding-left: 2px;
}

.section {
  margin-bottom: 34px;
  width: auto;
  max-width: 100%;

  a {
    min-width: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    text-decoration: none;
    color: var(--focused-selected-list-item-bg);
  }

  ul {
    margin: 0;
    list-style: none;
    padding: 0;

    &.well {
      padding: 10px 0;
    }
  }
}

.well {
  background-color: var(--my-bots-well-bg);
  border: var(--my-bots-well-border);

  &::-webkit-scrollbar-thumb {
    background-color: transparent
  }

  &:hover {
    &::-webkit-scrollbar-thumb {
      background-color: var(--my-bots-scrollbar-color);
    }
  }
}

.noBots {
  font-style: italic;
  padding: 0 10px;
}

.recentBotsList {
  max-height: 100px;
  overflow-y: auto;
  overflow-x: hidden;

  & > li {
    display: flex;
  }

  a {
    flex-shrink: 0;
  }
}

.recentBot {
  position: relative;
  padding: 0 16px;
  border: 1px solid transparent;

  &:hover {
    background-color: var(--my-bots-entry-bg);
    border: var(--my-bots-entry-border);

    .recentBotActionBar {
      display: block;
    }
  }

  > button {
    background-color: transparent;
    border: 1px solid transparent;
    color: var(--my-bots-entry-color);
    cursor: pointer;

    > span {
      font-weight: 600;

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.recentBotActionBar {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: auto;
  min-width: 16px;
  background-color: transparent;

  > button {
    border: 0;
    padding: 0;
    height: 0;
    width: 0;
    cursor: pointer;

    &:after {
      height: 16px;
      width: 8px;
      margin-right: 8px;
      content: "\2716";
      color: var(--tab-icon-color);
      font-size: 12px;
    }
  }
}

.recentBotPath {
  display: inline-block;
  margin-left: 8px;
  color: var(--my-bots-path-color);
  opacity: 0.5;
  user-select: text;
  cursor: text;
}

.openBot {
  margin-top: 24px;
  margin-bottom: 16px;
  width: 180px;
  height: 26px;

  :global {
    .ms-Button-label {
      line-height: 26px;
    }
  }
}

.ctaLink {
  background-color: transparent;
  border: 1px solid transparent;
  color: var(--focused-selected-list-item-bg);
  cursor: pointer;
  font-family: var(--default-font-family);
  font-weight: 600;
  padding: 0;
  white-space: normal;

    &:focus {
      outline: var(--p-button-border-focus);

    }

    &:hover {
      text-decoration: underline;
    }
}

.how-to-build-section {
  > h3 {
    font-size: 13px;
    font-weight: 600;
    letter-spacing: 0.35px;
    line-height: 16px;
    margin: 0 0 24px 0;
    text-transform: uppercase;
  }

  .step-container {
    display: flex;
    align-items: stretch;
    position: relative;

      .step-icon {
        display: flex;
        height: 38px;
        margin-right: 15px;
        width: 38px;

        > div {
          height: 30px;
          width: 30px;
          background-repeat: no-repeat;
        }

        > .build-plan01 {
          background-image: url('../../media/build_plan/bp_ic_01.svg');
        }

        > .build-plan02 {
          background-image: url('../../media/build_plan/bp_ic_02.svg');
        }

        > .build-plan03 {
          background-image: url('../../media/build_plan/bp_ic_03.svg');
        }

        > .build-plan04 {
          background-image: url('../../media/build_plan/bp_ic_04.svg');
        }

        > .build-plan05 {
          background-image: url('../../media/build_plan/bp_ic_05.svg');
        }

        > .build-plan06 {
          background-image: url('../../media/build_plan/bp_ic_06.svg');
        }
      }
      dl {
        border-left: 1px solid var(--welcome-how-to-border);
        display: block;
        padding: 0 24px;
        margin: 0;

        > dt::before {
          background-color: var(--welcome-page-bg);
          border: 1px solid var(--welcome-how-to-border);
          border-radius: 100%;
          content: '';
          left: 47px;
          height: 11px;
          position: absolute;
          width: 11px;
        }

        > .test-bullet::before {
          background-color: var(--welcome-how-to-test);
        }


        > dt {
          display: block;
          font-size: 13px;
          font-weight: bold;
          line-height: 18px;
        }

        > dd {
          font-size: 13px;
          line-height: 18px;
          margin-left: 0;
          padding-bottom: 22px;
        }
      }
  }

  .step-container:last-child dl {
    border-left: 1px solid transparent;
  }
}

.spacing {
  padding: 0 0 2px 2px;
}

